--- a/ch12/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch12/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -1,26 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Configurations>Debug;Release</Configurations>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4053495e-84a4-48c2-91d3-4b8290310020</UserSecretsId>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Microsoft.Extensions.Azure" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
+  </ItemGroup>
 
-	<PropertyGroup>
-		<ContainerRepository>codebreaker-bot</ContainerRepository>
-		<UserSecretsId>87a37cf2-8531-434a-b31c-fb3a0bbb46e4</UserSecretsId>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Azure.Identity" />
-		<PackageReference Include="CNinnovation.Codebreaker.GamesClient"  />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-		<PackageReference Include="Swashbuckle.AspNetCore" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
+  </ItemGroup>
 
 </Project>
