--- a/ch12/Codebreaker.GameAPIs/appsettings.json
+++ b/ch12/Codebreaker.GameAPIs/appsettings.json
@@ -2,16 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore": "Information",
-      "Codebreaker": "Trace"
-    },
-    "EventSource": {
-      "LogLevel": {
-        "Default": "Information"
-      }
-
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataStore": "Cosmos",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+  }
 }
