--- a/ch12/grafana/config/grafana.ini
+++ b/ch12/grafana/config/grafana.ini
@@ -2,7 +2,7 @@
 enabled = true
 
 # Organization name that should be used for unauthenticated users
-org_name = Main Org.
+org_name = Codebreaker Org.
 
 # Role for unauthenticated users, other valid values are `Editor` and `Admin`
 org_role = Admin
@@ -13,4 +13,4 @@ hide_version = false
 [dashboards]
 default_home_dashboard_path = /var/lib/grafana/dashboards/aspnetcore.json
 
-min_refresh_interval = 15s
+min_refresh_interval = 1s
