--- a/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -1,41 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<InvariantGlobalization>false</InvariantGlobalization>
-		<Configurations>Debug;Release</Configurations>
-		<UserSecretsId>fd1d3a37-908b-4899-ac69-4a1f3942d57b</UserSecretsId>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <UserSecretsId>603964e6-08bc-40f9-8505-074b9466a41f</UserSecretsId>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<InternalsVisibleTo Include="Codebreaker.GameAPIs.Tests" />
-		<InternalsVisibleTo Include="Codebreaker.GameAPIs.IntegrationTests" />
-	</ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="Codbreaker.APIs.Tests" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+	<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
+    <PackageReference Include="CNinnovation.Codebreaker.Postgres" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+    <PackageReference Include="Microsoft.Extensions.Azure" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
+  </ItemGroup>
 
-
-	<ItemGroup>
-		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
+  </ItemGroup>
 
 </Project>
