--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,6 +10,7 @@
     <PackageVersion Include="Aspire.Hosting.Keycloak" Version="9.2.1-preview.1.25222.1" />
     <PackageVersion Include="Aspire.Hosting.Kubernetes" Version="9.2.1-preview.1.25222.1" />
     <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.3.0" />
+    <PackageVersion Include="Aspire.Hosting.Seq" Version="9.3.0" />
     <PackageVersion Include="Aspire.Hosting.Valkey" Version="9.2.1" />
     <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.3.0" />
     <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.3.0" />
@@ -120,8 +121,8 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
     <PackageVersion Include="Spectre.Console.Cli" Version="0.50.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="8.1.3" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.3" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="8.1.4" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.4" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.v3" Version="2.0.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0" />
