--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -39,6 +39,7 @@
     <PackageVersion Include="Aspire.MongoDB.Driver.v3" Version="9.3.0" />
     <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.0" />
     <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.3.0" />
+    <PackageVersion Include="Aspire.Seq" Version="9.3.0" />
     <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.3.0" />
     <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.3.0" />
     <PackageVersion Include="Azure.Data.AppConfiguration" Version="1.6.1" />
