--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+    <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
     <NoWarn>$(NoWarn);NU1507</NoWarn>
   </PropertyGroup>
   <ItemGroup>
@@ -9,7 +9,7 @@
     <PackageVersion Include="Aspire.Hosting.Garnet" Version="9.3.0" />
     <PackageVersion Include="Aspire.Hosting.Keycloak" Version="9.2.1-preview.1.25222.1" />
     <PackageVersion Include="Aspire.Hosting.Kubernetes" Version="9.2.1-preview.1.25222.1" />
-    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.3.0" />
+    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.4.0" />
     <PackageVersion Include="Aspire.Hosting.Valkey" Version="9.2.1" />
     <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.3.0" />
     <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.3.0" />
@@ -17,31 +17,31 @@
     <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.3.0" />
     <PackageVersion Include="Aspire.Confluent.Kafka" Version="9.3.0" />
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.4.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.EventHubs" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.KeyVault" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.SignalR" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.Sql" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.MongoDB" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.MySql" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Kafka" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Redis" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Hosting.Testing" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.3.0" />
-    <PackageVersion Include="Aspire.MongoDB.Driver.v3" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.0" />
-    <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.3.0" />
-    <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.3.0" />
-    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.3.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.EventHubs" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.KeyVault" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.SignalR" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.Sql" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.MongoDB" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.MySql" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Kafka" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Redis" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Hosting.Testing" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.4.0" />
+    <PackageVersion Include="Aspire.MongoDB.Driver.v3" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
+    <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.4.0" />
+    <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.4.0" />
+    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.4.0" />
     <PackageVersion Include="Azure.Data.AppConfiguration" Version="1.6.1" />
-    <PackageVersion Include="Azure.Identity" Version="1.14.0" />
+    <PackageVersion Include="Azure.Identity" Version="1.14.2" />
     <PackageVersion Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.3.0" />
     <PackageVersion Include="BlazorApplicationInsights" Version="3.1.0" />
     <PackageVersion Include="CNinnovation.Codebreaker.Analyzers" Version="3.8.0" />
@@ -71,13 +71,13 @@
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
     <PackageVersion Include="Microsoft.Authentication.WebAssembly.Msal" Version="9.0.5" />
     <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="8.1.2" />
-    <PackageVersion Include="Microsoft.Azure.Cosmos" Version="3.50.0" />
+    <PackageVersion Include="Microsoft.Azure.Cosmos" Version="3.52.1" />
     <PackageVersion Include="Microsoft.Azure.SignalR" Version="1.30.3" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.5" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5" />
     <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.5" />
     <PackageVersion Include="Microsoft.Extensions.Azure" Version="1.11.0" />
@@ -124,7 +124,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.3" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.v3" Version="2.0.2" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="2.3.0" />
     <!-- Pomelo transitive package for Aspire.Pomelo.EntityFrameworkCore.MySql to use EF Core 9 instead of 8 -->
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
