--- a/ch05/FinalAspire/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch05/FinalAspire/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.0" />
+<Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Aspire.AppHost.Sdk" Version="13.0.0" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
