--- a/ch04/server/Codebreaker.AppHost/appsettings.json
+++ b/ch04/server/Codebreaker.AppHost/appsettings.json
@@ -11,7 +11,7 @@
     // change this to Cosmos to use the Azure Cosmos DB database
     // change this to Postgres to use the PostgreSQL database
     // change this to InMemory to use the in-memory repository
-    "DataStore": "Postgres",
+    "DataStore": "Cosmos",
 
     // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
     // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
