--- a/ch10/Final/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch10/Final/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,7 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <Sdk Name="Aspire.AppHost.Sdk" Version="13.0.0" />
-
+<Project Sdk="Aspire.AppHost.Sdk/13.0.0">
+	
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
@@ -11,7 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.Azure" />
     <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
